--- a/mlvsio/chan_public/index.html
+++ b/mlvsio/chan_public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
-<html>
+<html style="font-size:20px">
 <head>
-    <title>Synchronized Sliders</title>
+    <title>socketio test</title>
      <link rel="icon" href="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAADUlEQVQYV2PYF773PwAGewLSGezkXwAAAABJRU5ErkJggg=="/>
 </head>
 <body>
@@ -9,7 +9,7 @@
 :) Hi!
 <div>
 
- <input id="btntest" type="button" value="to main-menu" onclick="window.location.href = 'http://localhost:8000/xlvsio'" />
+ <input id="btntest" type="button" value="to main-menu" onclick="window.location.href = 'http://localhost:8000/mlvsio'" />
 
 </div>
 
